api1-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service1
  labels:
    app: api-service1
spec:
  selector:
    app: api-service1
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service1
  labels:
    app: api-service1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-service1
  template:
    metadata:
      labels:
        app: api-service1
    spec:
      containers:
        - name: api-service1
          image: bignose1flower/sample-api1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8001
              protocol: TCP
