api2-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service2
  labels:
    app: api-service2
spec:
  selector:
    app: api-service2
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service2
  labels:
    app: api-service2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-service2
  template:
    metadata:
      labels:
        app: api-service2
    spec:
      containers:
        - name: api-service2
          image: bignose1flower/sample-api2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8002
              protocol: TCP
