web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: web-service
  ports:
    - port: 80
      targetPort: node-port
      nodePort: 30090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
  labels:
    app: web-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        app: web-service
    spec:
      containers:
        - name: web-service
          image: bignose1flower/sample-web
          ports:
            - containerPort: 80
              name: node-port
              protocol: TCP
