ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample
  namespace : ingress-basic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: ingress-sample
  rules:
    - host: hello-world.local
      http:
        paths:
          - path: /svr1
            pathType: Prefix
            backend:
              service:
                name: api-service1
                port:
                  number: 8001
          - path : /svr2
            pathType: Prefix
            backend:
              service:
                name: api-service2
                port:
                  number: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: api-service1
  namespace: ingress-basic
spec:
  type: ExternalName
  # ExternalName Format : <service-name>.<namespace-name>.svc.cluster.local
  externalName: api-service1.default.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: api-service2
  namespace: ingress-basic
spec:
  type: ExternalName
  # ExternalName Format : <service-name>.<namespace-name>.svc.cluster.local
  externalName: api-service2.default.svc.cluster.local
